--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ python = "3.10.14"
 django = "^5.1"
 
 
+[tool.poetry.group.dev.dependencies]
+django-debug-toolbar = "^4.4.6"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
