--- a/django-polls/pyproject.toml
+++ b/django-polls/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "django-polls"
 version = "0.1"
 dependencies = [
-    "django>=X.Y",  # Replace "X.Y" as appropriate
+    "django>=5.1",  # Replace "X.Y" as appropriate
 ]
 description = "A Django app to conduct web-based polls."
 readme = "README.rst"
