--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "3.10.14"
 django = "^5.1"
+django-polls = {path = "django-polls/dist/django_polls-0.1.tar.gz"}
 
 
 [tool.poetry.group.dev.dependencies]
